--- a/Marlin/Views/Main/ActionsPage.xaml
+++ b/Marlin/Views/Main/ActionsPage.xaml
@@ -42,7 +42,7 @@
             <Grid Grid.Row="1"
                   Margin="50,0,50,10">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="{Binding Path=LengthAbout}"/>
                 </Grid.ColumnDefinitions>
 
