--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -97,6 +97,7 @@
                                                     <RowDefinition Height="*"/>
                                                     <RowDefinition Height="*"/>
                                                     <RowDefinition Height="{Binding Path=LengthImage}"/>
+                                                    <RowDefinition Height="*"/>
                                                 </Grid.RowDefinitions>
 
                                                 <Grid Grid.Row="0"
@@ -403,7 +404,44 @@
                                                                    Text="?"/>
                                                     </Border>
                                                 </Grid>
-                                                
+
+                                                <Grid Grid.Row="6"
+                                                      Margin="0,10">
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="auto"/>
+                                                        <ColumnDefinition Width="auto"/>
+                                                        <ColumnDefinition Width="*"/>
+                                                    </Grid.ColumnDefinitions>
+
+                                                    <TextBlock Grid.Column="0"
+                                                               FontSize="15"
+                                                               Margin="0,0,15,0"
+                                                               VerticalAlignment="Center"
+                                                               HorizontalAlignment="Center"
+                                                               Text="Поверх других окон:"/>
+
+                                                    <CheckBox Grid.Column="1"
+                                                              FontSize="15"
+                                                              IsChecked="{Binding Path=TopMost,UpdateSourceTrigger=PropertyChanged}"
+                                                              HorizontalContentAlignment="Center"/>
+
+                                                    <Border Grid.Column="2"
+                                                            CornerRadius="50"
+                                                            Width="25"
+                                                            HorizontalAlignment="Right"
+                                                            Margin="30,0,0,0"
+                                                            Height="25"
+                                                            ToolTip="Отображение окна Marlin поверх других окон."
+                                                            Background="Transparent"
+                                                            BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                            BorderThickness="2">
+                                                        <TextBlock VerticalAlignment="Center"
+                                                                   FontWeight="Bold"
+                                                                   FontSize="15"
+                                                                   HorizontalAlignment="Center"
+                                                                   Text="?"/>
+                                                    </Border>
+                                                </Grid>
                                             </Grid>
                                         </Grid>
                                     </Grid>
